src/test/ui/consts/issue-28113.stderr
error[E0277]: the trait bound `[closure@$DIR/issue-28113.rs:4:5: 4:13]: Fn<()>` is not satisfied
  --> $DIR/issue-28113.rs:4:5
   |
LL |     || -> u8 { 5 }()
   |     ^^^^^^^^^^^^^^^^ expected an `Fn<()>` closure, found `[closure@$DIR/issue-28113.rs:4:5: 4:13]`
   |
   = help: the trait `~const Fn<()>` is not implemented for closure `[closure@$DIR/issue-28113.rs:4:5: 4:13]`
note: the trait `Fn<()>` is implemented for `[closure@$DIR/issue-28113.rs:4:5: 4:13]`, but that implementation is not `const`
  --> $DIR/issue-28113.rs:4:5
   |
LL |     || -> u8 { 5 }()
   |     ^^^^^^^^^^^^^^^^
   = note: wrap the `[closure@$DIR/issue-28113.rs:4:5: 4:13]` in a closure with no arguments: `|| { /* code */ }`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
